--- a/.pylintrc
+++ b/.pylintrc
@@ -61,7 +61,7 @@ enable=abstract-class-instantiated,
     anomalous-backslash-in-string,
     anomalous-unicode-escape-in-string,
     apply-builtin,
-    arguments-differ,
+    # arguments-differ,
     assert-on-tuple,
     assigning-non-slot,
     assignment-from-no-return,
@@ -163,7 +163,7 @@ enable=abstract-class-instantiated,
     mixed-indentation,
     next-method-called,
     no-init,
-    no-member,
+    # no-member,
     no-method-argument,
     no-name-in-module,
     no-self-argument,
@@ -183,20 +183,20 @@ enable=abstract-class-instantiated,
     not-in-loop,
     notimplemented-raised,
     oct-method,
-    old-division,
+    # old-division,
     old-ne-operator,
     old-octal-literal,
     old-raise-syntax,
     parameter-unpacking,
     pointless-statement,
-    pointless-string-statement,
+    # pointless-string-statement,
     print-statement,
     property-on-old-class,
-    protected-access,
+    # protected-access,
     raising-bad-type,
     raising-non-exception,
     raising-string,
-    range-builtin-not-iterating,
+    # range-builtin-not-iterating,
     raw_input-builtin,
     redefine-in-handler,
     redefined-builtin,
@@ -238,14 +238,14 @@ enable=abstract-class-instantiated,
     unpacking-in-except,
     unpacking-non-sequence,
     unreachable,
-    unsubscriptable-object,
+    # unsubscriptable-object,
     unsupported-binary-operation,
     unsupported-membership-test,
     unused-format-string-argument
     unused-format-string-argument,
     unused-format-string-key,
     unused-import,
-    unused-variable,
+    # unused-variable,
     unused-wildcard-import,
     used-before-assignment,
     useless-else-on-loop
