--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
     script:
       - ./scripts/copyright_line_check.sh
       - pylint --rcfile=.pylintrc bubs
+      - pydocstyle --config=.pydocstyle_test bubs
+      - pydocstyle --config=.pydocstyle bubs
   - name: "Python 3.6 unit tests"
     python: "3.6"
     script:
