--- a/.github/workflows/tests_and_lint.yml
+++ b/.github/workflows/tests_and_lint.yml
@@ -35,8 +35,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Python dependencies
+      - name: Set up Python ${{ matrix.python-version }}
         run: |
+          python -m pip install --upgrade pipenv wheel
           pipenv install --dev --deploy --system
           pip install -e .
       - name: Test with pytest
