--- a/.github/workflows/tests_and_lint.yml
+++ b/.github/workflows/tests_and_lint.yml
@@ -1,11 +1,8 @@
 name: Tests and lint
-
 on:
   push:
     branches:
-      - main
-    tags:
-      - "v*"
+      - master
   pull_request:
     branches:
       - "*"
@@ -14,33 +11,39 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
-    steps:
-      - name: Install Python dependencies
-        run: |
-          pipenv install --dev --deploy --system
-          pip install -e .
-      - name: Run lint checks
-        run: |
-          pipenv run ./scripts/lint.sh ${{ matrix.lint-flags }}
-  tests:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-        markers: ["not slow", "slow"]
+        python-version: [3.6]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Install Python dependencies
         run: |
-          python -m pip install --upgrade pipenv wheel
-          pipenv install --dev --deploy --system
-          pip install -e .
+          pip install --upgrade pip
+          pip install --upgrade setuptools wheel
+          pip install -r dev-requirements.txt
+      - name: Run lint checks
+        run: |
+          ./scripts/copyright_line_check.sh
+          ./scripts/lint.sh
+  tests:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Python dependencies
+        run: |
+          pip install --upgrade pip
+          pip install --upgrade setuptools wheel
+          pip install -r dev-requirements.txt
       - name: Test with pytest
         run: |
-          pytest --cov=bubs bubs/tests -m '${{ matrix.markers }}'
-          codecov
+          pytest --cov=bubs bubs
+          coveralls
